--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+   <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+   <h1>My webmap</h1>
+   <p>This is an example webmap</p>
+
+   <div class='parent'>
+        <iframe 
+        id="inlineFrameExample"
+        title="Inline Frame Example"
+        width="600"
+	height="500"
+        src="webmap"> </iframe>
+   </div>
+
+
+</body>
+</html> 
+
