--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         title="Inline Frame Example"
         width="600"
 	height="500"
-        src="webmap"> </iframe>
+        src="webmap/"> </iframe>
    </div>
 
 
