--- a/index.html
+++ b/index.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset=utf-8 />
+  <title>Showing an ArcGIS basemap</title>
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
+    <!-- Load Leaflet from CDN -->
+    <link rel="stylesheet" href="//unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+    integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
+    integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
+    crossorigin=""></script>
+
+
+    <!-- Load Esri Leaflet from CDN -->
+    <script src="//unpkg.com/esri-leaflet@2.2.3/dist/esri-leaflet.js"
+    integrity="sha512-YZ6b5bXRVwipfqul5krehD9qlbJzc6KOGXYsDjU9HHXW2gK57xmWl2gU6nAegiErAqFXhygKIsWPKbjLPXVb2g=="
+    crossorigin=""></script>
+
+
+  <style>
+    body { margin:0; padding:0; }
+    #map { position: absolute; top:0; bottom:0; right:0; left:0; }
+  </style>
+</head>
 <body>
 
-   <h1>My webmap</h1>
-   <p>This is an example webmap</p>
+<div id="map"></div>
 
-   <div class='parent'>
-        <iframe 
-        id="inlineFrameExample"
-        title="Inline Frame Example"
-        width="600"
-	height="500"
-        src="webmap/"> </iframe>
-   </div>
+<script>
+  var map = L.map('map').setView([39, -97.5], 4);
 
+  L.esri.basemapLayer('Streets').addTo(map);
+</script>
 
 </body>
-</html> 
-
+</html>
