--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 
 <body>
 
-   <h1>My webmap</h1>
-   <p>This is an example webmap</p>
+   <h1>Ice flow</h1>
+   <p>Ice flow map</p>
 
    <div class='parent'>
         <iframe 
         id="inlineFrameExample"
         title="Inline Frame Example"
-        width="600"
-	height="500"
+        width="700"
+	height="600"
         src="webmap/"> </iframe>
    </div>
 
