--- a/webmap/index.html
+++ b/webmap/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="//unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
     <link rel="stylesheet" href="styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
+    <script
+			  src="http://code.jquery.com/jquery-2.2.4.js"
+			  integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+			  crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="//unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="//unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
 </head>
 
 <body>
@@ -16,6 +22,9 @@
     <script src="//d3js.org/d3.v4.min.js"></script>
     <script src="//npmcdn.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.0/chroma.min.js"></script>
+    <script src="//unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
+    <script src="https://unpkg.com/leaflet.markercluster.layersupport@2.0.1/dist/leaflet.markercluster.layersupport.js"></script>
+		
 
     <!-- Plugins -->
     <!-- raster layers -->
@@ -38,6 +47,19 @@
       
         // Put a scale
         L.control.scale({imperial:false}).addTo(map);
+
+        // test importing geoJson data
+	var photoImg = '<img src="data/picture.jpg" height="150px" width="150px"/>';
+
+	var geojsonFeature=$.getJSON("data/points.geojson", function(data) {
+	     datalayer = L.geoJson(data, {
+	          onEachFeature: function (feature, layer) {
+		  layer.bindPopup("This is a GPS <br>" + photoImg);}
+		  });
+          var   markers = L.markerClusterGroup();
+	  markers.addLayer(datalayer);
+	  map.addLayer(markers)
+	  });
 
         // Vectorfield animations
         d3.text('data/UMdg.asc', function (u) {
@@ -82,14 +104,15 @@
 
 		// center map on raster layer
                 map.fitBounds(layer.getBounds());
-                
+
                 // control button
                 L.control.layers({
 		   "Imagery": im_bm,
 		   "Topographic": tp_bm,
 		}, {
-                    "Vector animation": layer,
                     "Derived magnitude": magnitude,
+                    "Vector animation": layer,
+		    "Tools": datalayer,
                 }, {
                         position: 'topright',
                         collapsed: false
@@ -121,8 +144,8 @@
                   bar.addTo(map);
 		  // if vector animation is on; put it on top with cyan color
                   if (map.hasLayer(layer)) {
-                    map.removeLayer(layer);
-                    layer.addTo(map);
+                    //map.removeLayer(layer);
+                    //layer.addTo(map);
                     layer.options.color = 'cyan';
                   }
                  } else if (eventLayer.name === 'Vector animation') {
