--- a/webmap/index.html
+++ b/webmap/index.html
@@ -23,7 +23,7 @@
     <script src="//npmcdn.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.0/chroma.min.js"></script>
     <script src="//unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
-    <script src="https://unpkg.com/leaflet.markercluster.layersupport@2.0.1/dist/leaflet.markercluster.layersupport.js"></script>
+    <script src="//unpkg.com/leaflet.markercluster.layersupport@2.0.1/dist/leaflet.markercluster.layersupport.js"></script>
 		
 
     <!-- Plugins -->
@@ -49,12 +49,12 @@
         L.control.scale({imperial:false}).addTo(map);
 
         // test importing geoJson data
-	var photoImg = '<img src="data/picture.jpg" height="150px" width="150px"/>';
+	//var photoImg = '<img src="data/picture.jpg" height="150px" width="150px"/>';
 
 	var geojsonFeature=$.getJSON("data/points.geojson", function(data) {
 	     datalayer = L.geoJson(data, {
 	          onEachFeature: function (feature, layer) {
-		  layer.bindPopup("This is a GPS <br>" + photoImg);}
+		  layer.bindPopup("This is a GPS <br>");}
 		  });
          L.markerClusterGroup.layerSupport().addTo(map).checkIn(datalayer);
          // var   markers = L.markerClusterGroup();
