get mer de glace and argentiere velocities

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
 <body>
 
-   <h1>Ice flow</h1>
-   <p>Ice flow map</p>
+   <h1>Glacier studies</h1>
+   <p>Development of a web map to illustrate glacier ice flow dynamics   <br>
+      click on the map when vector animation is on to get velocity magnitude
+   </p>
 
    <div class='parent'>
         <iframe 
