--- a/webmap/index.html
+++ b/webmap/index.html
@@ -36,7 +36,10 @@
     crossorigin=""></script>
 
     <script>
-        let map = L.map("map");
+        let map = L.map("map",{
+	   center: [45.91,6.96],
+	   zoom: 12,
+	});
         
 	// esri basemaps 
         imagery=L.esri.basemapLayer('Imagery');
@@ -59,21 +62,15 @@ var data = {
 ]
 }
 
-	/*var geojsonFeature=$.getJSON("data/points.geojson", function(data) {
-	     console.log(data);*/
 	     datalayer = L.geoJson(data, {
 	          onEachFeature: function (feature, layer) {
 		  layer.bindPopup("This is a GPS <br>" + photoImg);}
 		  });
          L.markerClusterGroup.layerSupport().addTo(map).checkIn(datalayer);
-         // var   markers = L.markerClusterGroup();
-	 // markers.addLayer(datalayer);
-	 // map.addLayer(markers)
-	  //});
 
         // Vectorfield animations
-        d3.text('data/UMdg.asc', function (u) {
-            d3.text('data/VMdg.asc', function (v) {
+        d3.text('data/Velocity_U.asc', function (u) {
+            d3.text('data/Velocity_V.asc', function (v) {
 	        // get vector component
                 let vf = L.VectorField.fromASCIIGrids(u, v, 1.0); 
                 var range = [0,500]
@@ -113,15 +110,15 @@ var data = {
                 });
 
 		// center map on raster layer
-                map.fitBounds(layer.getBounds());
+                //map.fitBounds(layer.getBounds());
 
                 // control button
                 L.control.layers({
 		   "Imagery": im_bm,
 		   "Topographic": tp_bm,
 		}, {
-                    "Derived magnitude": magnitude,
                     "Vector animation": layer,
+                    "Velocity magnitude": magnitude,
 		    "Tools": datalayer,
                 }, {
                         position: 'topright',
@@ -149,7 +146,7 @@ var data = {
                
 	      // interaction when layer turn on/off 
                map.on('overlayadd', function (eventLayer) {
-                 if (eventLayer.name === 'Derived magnitude') {
+                 if (eventLayer.name === 'Velocity magnitude') {
 		  // add legend
                   bar.addTo(map);
 		  // if vector animation is on; put it on top with cyan color
@@ -166,7 +163,7 @@ var data = {
                 });
                 map.on('overlayremove', function (eventLayer) {
                // Switch to the Permafrost legend...
-                 if (eventLayer.name === 'Derived magnitude') {
+                 if (eventLayer.name === 'Velocity magnitude') {
                   map.removeControl(bar);
                   if (map.hasLayer(layer)) {layer.options.color = scale}
                  } else if (eventLayer.name === 'Vector animation') {
