--- a/webmap/index.html
+++ b/webmap/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
     <script
-			  src="http://code.jquery.com/jquery-2.2.4.js"
-			  integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
-			  crossorigin="anonymous"></script>
+    			  src="https://code.jquery.com/jquery-2.2.4.min.js"
+			  			  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+						  			  crossorigin="anonymous"></script>
     <link rel="stylesheet" href="//unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="//unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
 </head>
@@ -68,7 +68,7 @@ var data = {
 		  });
          L.markerClusterGroup.layerSupport().addTo(map).checkIn(datalayer); */
 
- 	var geojsonFeature=$.getJSON('data/points.geojson', function(data) {
+ 	var geojsonFeature=jQuery.getJSON('data/points.geojson', function(data) {
 			     console.log(data);
 			     console.log(JSON.stringify(data));
 		     	     datalayer = L.geoJson(data, {
