--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <iframe id="inlineFrame" title="Argentiere Webmap" src="webmap/"> </iframe>
    </div>
 
+   <div class='parent'>
+         <iframe id="inlineFrame" title="test3D render" src="http://viewer.pvgeo.org/?fileURL=https://fgillet.github.io/greenland/tunnels.vtkjs"></iframe> 
+   </div>
 
 </body>
 </html>
