--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    </div>
 
    <div class='parent'>
-         <iframe id="inlineFrame" title="test3D render" src="http://viewer.pvgeo.org/?fileURL=https://fgillet.github.io/greenland/tunnels.vtkjs"></iframe> 
+         <iframe id="inlineFrame2" title="test3D render" src="http://viewer.pvgeo.org/?fileURL=https://fgillet.github.io/greenland/tunnels.vtkjs"></iframe> 
    </div>
 
 </body>
