--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
    <p>Development of a web map to illustrate glacier ice flow dynamics   <br>
    </p>
 
+
    <div class='parent'>
         <iframe id="inlineFrame" title="Argentiere Webmap" src="webmap/"> </iframe>
    </div>
 
+   <p> 3D render   <br>
+   </p>
+
    <div class='parent'>
-         <iframe id="inlineFrame2" title="test3D render" src="http://viewer.pvgeo.org/?fileURL=https://fgillet.github.io/greenland/tunnels.vtkjs"></iframe> 
+        <iframe id="inlineFrame2" title="aa" src="http://viewer.pvgeo.org/?fileURL=https://fgillet.github.io/greenland/greenland1.vtkjs"> </iframe>
    </div>
 
 </body>
