--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    </p>
 
    <div class='parent'>
-        <iframe id="inlineFrame2" title="aa" src="http://viewer.pvgeo.org/?fileURL=https://fgillet.github.io/greenland/tunnels.vtkjs"> </iframe>
+        <iframe id="inlineFrame2" title="aa" src="https://viewer.pvgeo.org/?fileURL=https://fgillet.github.io/greenland/tunnels.vtkjs"> </iframe>
    </div>
 
 </body>
