--- a/index.html
+++ b/index.html
@@ -22,12 +22,8 @@
         <iframe id="inlineFrame" title="Argentiere Webmap" src="webmap/"> </iframe>
    </div>
 
-   <p> 3D render   <br>
+   <p> Excample of 3D rendering of greenland ice flow simuation with PVGeo <a href="http://viewer.pvgeo.org/?fileURL=http://fgillet.github.io/greenland/greenland1.vtkjs" target="_blank">here</a>    <br>
    </p>
-
-   <div class='parent'>
-        <iframe id="inlineFrame2" title="aa" src="https://viewer.pvgeo.org/?fileURL=https://fgillet.github.io/greenland/tunnels.vtkjs"> </iframe>
-   </div>
 
 </body>
 </html>
