--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <iframe id="inlineFrame" title="Argentiere Webmap" src="webmap/"> </iframe>
    </div>
 
-   <p> Excample of 3D rendering of greenland ice flow simuation with PVGeo <a href="http://viewer.pvgeo.org/?fileURL=http://fgillet.github.io/greenland/greenland1.vtkjs" target="_blank">here</a>    <br>
+   <p> Excample of 3D rendering of greenland ice flow simuation with PVGeo <a href="http://viewer.pvgeo.org/?fileURL=https://fgillet.github.io/greenland/greenland1.vtkjs" target="_blank">here</a>    <br>
    </p>
 
 </body>
