--- a/webmap/index.html
+++ b/webmap/index.html
@@ -182,7 +182,7 @@
       // Show a checkbox next to non-exclusive group labels for toggling all
         groupCheckboxes: false,
       //
-       collapsed: true
+       collapsed: false
       };
        var layerControl = L.control.groupedLayers(Basemaps, groupedOverlays, options).addTo(map);
     /*  L.control.layers({
