--- a/webmap/index.html
+++ b/webmap/index.html
@@ -73,8 +73,7 @@
  	var geojsonFeature=jQuery.getJSON('data/Cavitometer.geojson', function(data) {
 	   datalayer = L.geoJson(data, {
 	     onEachFeature: function (feature, layer) {
-	       layer.bindPopup('<a href="https://saussure.osug.fr/Cavitometer" target="_blank" >feature.properties.popupContent</a> <br>' + feature.properties.description <br> 
-	       + '<img src=feature.properties.picture height="150px" width="150px"/>');}});
+	       layer.bindPopup(feature.properties.popupContent);}});
 	      L.markerClusterGroup.layerSupport().addTo(map).checkIn(datalayer);
         });
 
