--- a/webmap/index.html
+++ b/webmap/index.html
@@ -73,7 +73,7 @@
  	var geojsonFeature=jQuery.getJSON('data/Cavitometer.geojson', function(data) {
 	   datalayer = L.geoJson(data, {
 	     onEachFeature: function (feature, layer) {
-	       layer.bindPopup(feature.properties.popupContent <br> +
+	       layer.bindPopup(feature.properties.popupContent + "<br>" +
 	       '<img src=feature.properties.picture height="150px" width="150px"/>');}});
 	      L.markerClusterGroup.layerSupport().addTo(map).checkIn(datalayer);
         });
